# notapkgtool

./: .gitattributes  .gitignore  404.html  BRANCHING.md  CHANGELOG.md  DOCUMENTATION.md  IMPLEMENTATION_PLAN.md  README.md  ROADMAP.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  refactor-command-structure.plan.md  sitemap.xml
.claude/: CLAUDE.md  settings.json
.claude/agents/: napt-reviewer.md
.claude/hooks/: check_license_header.py  lint_edited.py
.claude/skills/add-recipe-field/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/roadmap/: SKILL.md
.claude/skills/ship/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs.yml  publish.yml
api/: index.html
api/cli/: index.html
api/config/: index.html
api/core/: index.html
api/detection/: index.html
api/discovery/: index.html
api/download/: index.html
api/exceptions/: index.html
api/io/: index.html
api/logging/: index.html
api/msix_scripts/: index.html
api/packager/: index.html
api/policy/: index.html
api/psadt/: index.html
api/registry_scripts/: index.html
api/requirements/: index.html
api/results/: index.html
api/state/: index.html
api/template/: index.html
api/upload/: index.html
api/validation/: index.html
api/versioning/: index.html
branching/: index.html
changelog/: index.html
common-tasks/: index.html
contributing/: index.html
defaults/: org.yaml
defaults/vendors/: google.yaml
docs/: branching.md  changelog.md  common-tasks.md  contributing.md  index.md  quick-start.md  recipe-reference.md  roadmap.md  user-guide.md
docs/api/: build.md  cli.md  config.md  core.md  detection.md  discovery.md  download.md  exceptions.md  index.md  io.md  logging.md  msix_scripts.md  packager.md  policy.md  psadt.md  registry_scripts.md  requirements.md  results.md  state.md  template.md  upload.md  validation.md  versioning.md
intunepackager/: __init__.py  core.py
intunepackager/processors/: download.py  version_check.py
napt/: __init__.py  cli.py  core.py  detection.py  exceptions.py  logging.py  requirements.py  results.py  validation.py
napt/config/: __init__.py  defaults.py  loader.py
napt/discovery/: __init__.py  api_github.py  api_json.py  base.py  manager.py  url_download.py  web_scrape.py
napt/download/: __init__.py  download.py
napt/io/: __init__.py  download.py  upload.py
napt/policy/: __init__.py  updates.py
napt/promote/: __init__.py  applier.py  drift.py  planner.py  preflight.py  reconcile.py
napt/psadt/: __init__.py  release.py
napt/state/: __init__.py  cache.py  deployment.py  tracker.py
napt/upload/: __init__.py  auth.py  graph.py  intunewin.py  manager.py  stamp.py
napt/versioning/: __init__.py  compare.py  keys.py  msi.py  msix.py
notapkgtool/: __init__.py  cli.py  core.py  detection.py  exceptions.py  logging.py  requirements.py  results.py  validation.py
notapkgtool/auth/: credential_manager.py
notapkgtool/config/: __init__.py  loader.py
notapkgtool/discovery/: __init__.py  api_github.py  api_json.py  base.py  github_release.py  http_json.py  http_static.py  url_download.py  url_pattern.py  url_regex.py  web_scrape.py
notapkgtool/io/: __init__.py  download.py  upload.py
notapkgtool/policy/: __init__.py  updates.py
notapkgtool/processors/: download.py  intune.py  version_check.py
notapkgtool/psadt/: __init__.py  release.py
notapkgtool/state/: __init__.py  tracker.py
notapkgtool/versioning/: __init__.py  keys.py  msi.py  url_regex.py
quick-start/: index.html
recipe-reference/: index.html
recipes/7-Zip/: 7zip-x64-exe.yaml  7zip-x64-msi.yaml  7zip-x86-exe.yaml  7zip-x86-msi.yaml  7zip.yaml
recipes/Examples/: json-api-example.yaml
recipes/Git/: git.yaml
recipes/Google/: chrome.yaml
recipes/Microsoft/: vscode.yaml
recipes/Slack/: slack-msix.yaml
roadmap/: index.html
search/: search_index.json
state/: .gitignore
tests/: README.md  conftest.py  test_build_manager.py  test_build_template.py  test_cli.py  test_config.py  test_core.py  test_detection.py  test_discovery.py  test_download.py  test_integration.py  test_integration_build.py  test_integration_packaging.py  test_msix_metadata.py  test_packager.py  test_promote.py  test_promote_apply.py  test_promote_drift.py  test_promote_preflight.py  test_promote_reconcile.py  test_psadt_release.py  test_requirements.py  test_state.py  test_validation.py  test_version_check.py  test_versioning.py
tests/fixtures/: test.yaml
tests/integration/: test_build.py  test_core.py  test_packaging.py
tests/scripts/: manual_test_http_json.py  showcase_version_check.py  smoke_test_chrome.py
tests/upload/: conftest.py  test_auth.py  test_graph.py  test_intunewin.py  test_manager.py  test_stamp.py
user-guide/: index.html
