[tool.poetry]
name = "notapkgtool"
version = "0.1.0"
description = "NAPT - Not a Pkg Tool for Windows/Intune packaging with PSADT"
authors = ["Roger Cibrian"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [{ include = "notapkgtool" }]

[tool.poetry.dependencies]
# support 3.11+ with no upper bound - the codebase uses stable APIs
python = ">=3.11"
requests = "^2.32"
pyyaml = ">=6.0.2,<7.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.13.0"
black = "^25.1.0"
requests-mock = "^1.12.1"

[tool.poetry.scripts]
napt = "notapkgtool.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# -----------------------------
# Formatting (Black)
# -----------------------------
[tool.black]
line-length = 88
# match your supported range so Black doesn't emit 3.13-only syntax
target-version = ["py311"]

# -----------------------------
# Linting (Ruff)
# -----------------------------
[tool.ruff]
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".ipynb_checkpoints",
    ".mypy_cache", ".nox", ".pants.d", ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache",
    ".svn", ".tox", ".venv", ".vscode", "__pypackages__", "_build", "buck-out", "build",
    "dist", "node_modules", "site-packages", "venv",
]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
extend-ignore = ["E203", "E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["notapkgtool"]
combine-as-imports = true
force-sort-within-sections = true

# -----------------------------
# Pytest
# -----------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
