[project]
name = "napt"
version = "0.3.1"
description = "Automates the entire workflow for packaging Windows applications and deploying them to Microsoft Intune"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "Roger Cibrian"}
]
keywords = ["intune", "intunewin", "msi", "psadt", "packaging", "windows", "deployment", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Software Distribution",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32",
    "pyyaml>=6.0.2",
    "jsonpath-ng>=1.6.1",
    "beautifulsoup4>=4.14.0",
]

[project.scripts]
napt = "napt.cli:main"

[project.urls]
Documentation = "https://rogercibrian.github.io/notapkgtool"
Changelog = "https://rogercibrian.github.io/notapkgtool/changelog/"
Source = "https://github.com/RogerCibrian/notapkgtool"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# -----------------------------
# Poetry
# -----------------------------
[tool.poetry]
packages = [{include = "napt"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.13.0"
black = "^25.1.0"
requests-mock = "^1.12.1"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.23"
mkdocstrings = "^0.30.1"
mkdocstrings-python = "^1.18.2"

# -----------------------------
# Formatting (Black)
# -----------------------------
[tool.black]
line-length = 88
target-version = ["py311"]

# -----------------------------
# Linting (Ruff)
# -----------------------------
[tool.ruff]
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".ipynb_checkpoints",
    ".mypy_cache", ".nox", ".pants.d", ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache",
    ".svn", ".tox", ".venv", ".vscode", "__pypackages__", "_build", "buck-out", "build",
    "dist", "node_modules", "site-packages", "venv",
]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
extend-ignore = ["E203", "E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["napt"]
combine-as-imports = true
force-sort-within-sections = true

# -----------------------------
# Pytest
# -----------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--basetemp=.pytest-tmp"
markers = [
    "integration: Slow tests requiring network and real external dependencies",
]
